--- a/api-event-ticketing-system-R4shad/package.json
+++ b/api-event-ticketing-system-R4shad/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9"
   }
 }
